[tool.poetry]
name = "ruuvitag-collector"
version = "1.0.0"
description = "Collect measurements from RuuviTag sensors to InfluxDB and other databases."
authors = ["Niko Korhonen <1004138+niktheblak@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4"
ruuvitag-sensor = "^2.0.0"
influxdb = "^5.2.3"
google-cloud-pubsub = "^2.0.0"
google-cloud-logging = "^3.0.0"
retrying = "^1.3.3"
confuse = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
